[package]
name = "sweeten"
version = "0.15.0-dev"
edition = "2024"
rust-version = "1.92"
authors = ["Andy Terra <tech@andyterra.com>"]
description = "`sweeten` your daily `iced` brew"
license = "MIT"
repository = "https://github.com/airstrike/sweeten"
keywords = ["gui", "iced", "widgets"]
categories = ["gui"]
readme = "README.md"

[features]
crisp = ["iced_core/crisp"]

[dependencies]
iced_core.version = "0.15.0-dev"
iced_runtime.version = "0.15.0-dev"
iced_widget.version = "0.15.0-dev"
unicode-segmentation = "1.11.0"

[dev-dependencies]
iced.version = "0.15.0-dev"
iced.features = ["advanced", "markdown", "svg", "tokio"]
iced_test.version = "0.15.0-dev"
tokio = { version = "1", features = ["time"] }

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
iced_core = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
iced_runtime = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
iced_widget = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
iced_test = { git = "https://github.com/iced-rs/iced.git", branch = "master" }

# Uncomment to test against local iced checkout
# [patch.crates-io]
# iced.path = "../iced"
# iced_core.path = "../iced/core"
# iced_runtime.path = "../iced/runtime"
# iced_widget.path = "../iced/widget"
# iced_test.path = "../iced/test"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--extend-css", "doc-style.css"]

[lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
unsafe_code = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("advanced"))'] }

[lints.clippy]
semicolon_if_nothing_returned = "deny"
trivially-copy-pass-by-ref = "deny"
redundant-closure-for-method-calls = "deny"
needless_borrow = "deny"
useless_conversion = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"
